--- a/css/header.css
+++ b/css/header.css
@@ -1,27 +1,29 @@
 :root{
    --color-hover:#daa520;
 }
-
+        /*Engloba todo o meu Header*/
 #meu-cabecalho{
     background-image: linear-gradient(0deg,#4d4c4cda,rgba(0, 0, 0, 0.959)),url(/img/backgraund/bg.header.jpg);
     color: aliceblue;
     min-height: 100vh;
     width: 100%;
-    display: flex;
+    display: none;
     justify-content: center;
     flex-direction: column;
     background-color: rgb(0, 0, 0);
 }
 
             /*ESTLIZAÇÃO HEADER PARA DESKTOP*/
-
-
 #menu-nav{
     height: 6vh;
-    width: 97%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    position: fixed;
+    top: 0;
+    padding-right: 50px;
+    background-color: rgba(0, 0, 0, 0.747);
     font-family:var(--font-padrao);
     animation: opacy-header 1s 1 ease-in-out ;
 }
@@ -81,12 +83,15 @@
 
     /*ESTILIZAÇÃO MAIN DESKTOP*/
 
+        /*Engloba todo o meu conteudo abaixo do menu*/
 .continer-conteudos{
     color: aliceblue;
     width: 100%;
     min-height: 94vh;
     display: flex;
 }
+
+    /*Estlização lado esquerdo, onde contem redes e botão*/
 .conteudoladoesquerdo{
     min-height: 100%;
     width:60%;
@@ -98,7 +103,7 @@
     font-size: 2rem;
     font-weight: 500;
     font-family: var(--font-padrao);
-    padding-top: 25%;
+    padding-top: 15%;
 }
 .conteudoladoesquerdo span{
     font-size: 2rem;
@@ -113,7 +118,7 @@
     padding-top: 20px;
     color: var(--color-hover);
 }
-
+                /*Abaixo do Ruan, contem logos de redes sociais*/
 .contatosheadar{
     color: aliceblue;
     width: 90%;
@@ -141,22 +146,39 @@
 }
 
 
-
-.imglogos{
-    width: 40%;
-    height:10%;
+         /*estilização do botão (mais sobre mim) no headar*/
+.btnheadaer{
+    width: 30%;
+    height: 6%;
+    font-family:var(--font-padrao);
+    font-weight: 400;
+    font-size: .8rem;
     display: flex;
     align-items: center;
     justify-content: center;
-     gap: 20px;
+    border-radius: 15px;
+    border: 1px solid var(--color-hover);
+    color: var(--color-hover);
+    cursor: pointer;
+    margin-top: 10%;
 }
+.btnheadaer:hover{
+    background-color: #daa520;
+    border: 1px solid #fff;
+    color: #fff;
+}
+
+
+
+
+        /*Engloba tudo do lado direito*/
 .conteudoladodireiro{
     min-height: 100%;
     width: 40%;
     align-items: center;
     display: flex;
 }
-
+        /*img destaque lado direito*/
 .conteudoladodireiro img{
     width: 80%;
     animation: img-rigth 1s 1 ease-in-out;
@@ -173,10 +195,7 @@
 
 
 
-
-
-
-            /*ESTILIZAÇÃO HEADER PARA MOBILE*/
+     /*ESTILIZAÇÃO HEADER PARA MOBILE*/
 
 @media(max-width:450px){
     #menu-nav-mobile{
@@ -232,4 +251,114 @@
     .conteudoladodireiro{
         display: none;
     }
+}
+
+
+
+            /*Estlização do meu Main*/
+
+main{
+    background-color: lemonchiffon;
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+main .h1-sobremim{
+    width: 60%;
+    height: 5%; 
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    margin-top: 40px; 
+    margin-bottom: 20px;
+}
+
+main .h1-sobremim h1{
+    font-family: var(--font-padrao);
+    color: var(--color-hover);
+    font-size: 1.2rem;
+    text-transform: uppercase;
+}
+main .h1-sobremim .funcao{
+    font-family: var(--font-padrao);
+    color: var(--color-hover);
+    font-size: .9rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    padding-top: 10px;
+}
+main .containersobre{
+    width: 87%;
+    min-height: 30vh;   
+    font-family: var(--font-padrao);
+    display: flex;
+    
+}
+
+.containersobre .textosmobre{
+    width: 86%;
+    min-height:100%;
+    padding-left: 20px;
+}
+
+.containersobre .imgsobre{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;                     
+}
+
+.containersobre .imgsobre img{
+    width: 100%;
+    border-radius: 50%;
+}
+
+.containersobre h1{
+    font-size: 1.1rem;
+    font-weight: 400;
+    text-indent: 40px;
+}
+
+.containersobre p{
+    font-size: 1.1rem;
+    text-indent: 7px;
+    text-decoration-line: 20px;
+}
+
+
+.containerhabilidades{
+    height: 200px;
+    width: 87%;
+    display: flex;
+    justify-content: center;
+}
+.containerhabilidades
+.sobrecomplementares{
+    width: 50%;
+    height: 200px;
+    display: flex;
+    align-items: center;
+}
+.containerhabilidades
+.sobrecomplementares 
+.intersobrelis{
+    list-style: none;
+    font-family: var(--font-padrao);
+    font-size: .9rem;
+}
+.containerhabilidades
+.sobrecomplementares 
+.intersobrelis li{
+    padding-top: 10px;
+}
+.imglogos{
+    width: 20%;
+    height:10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 5%;
 }
