--- a/css/header.css
+++ b/css/header.css
@@ -1,13 +1,13 @@
 :root{
     --princ-color: #f0eeee;
     --secun-color:#fff;
-   --color-hover:#7ffaea;
-   --backgraund: #000000;
+   --color-hover:#7ffa9e;
+   --backgraund: #431558f8;
 }
 
         /*Engloba todo o meu Header*/
 #meu-cabecalho{
-    background-image: linear-gradient(180deg, #000000f8,#000000f6),url(../img/backgraund/tendencias-em-tecnologia-para-2023-o-que-ja-vingou-o-que-ficou-pelo-caminho-e-novas-apostas.jpg);
+    background-image: linear-gradient(180deg, #431558f8,#431558f8),url(../img/backgraund/tendencias-em-tecnologia-para-2023-o-que-ja-vingou-o-que-ficou-pelo-caminho-e-novas-apostas.jpg);
     background-position: center;
     background-size: cover;
     color: var(--princ-color);
@@ -205,7 +205,7 @@
     color: var(--secun-colore);
     cursor: pointer;
     margin-top: 4%;
-    background-color: black;
+    background-color: #7ffa9e;
     animation: contheader 1s 1 ease-in-out;
 }
 .btnheadaer:hover{
