--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 :root{
     --font-padrao:"Montserrat", sans-serif;
     --main-bg-color: brown;
+    --color-hover:  blue;
 }
 
 *{
@@ -9,20 +10,41 @@
     box-sizing: border-box;
     
 }
+.body{
+    position: relative;
+}
+
+.cardbakgraund{
+    position: absolute;
+    width:100%;
+    min-height: 100vh;
+    background-image: line;
+    background-image: linear-gradient(45deg, black, #ff0000e3), url(../img/backgraund/tendencias-em-tecnologia-para-2023-o-que-ja-vingou-o-que-ficou-pelo-caminho-e-novas-apostas.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    border-top-left-radius:0% ;
+    border-bottom-left-radius:0px ;
+    border-bottom-right-radius: 100%;
+    z-index: -1;
+}
 
 /*Estlização do header*/
 .containerheader{
     min-height:100vh;
     width: 100%;
-    background-image: line;
+    background-color: rgb(182, 182, 182);
 }
 
+/*CONTEINER DO MEU MENU DE NAVEGAÇÃO*/
 .containerheader
 .meuheader{
     width: 100%;
     min-height:5vh;
     display: flex;
     justify-content: center;
+    color: #fff;
+    z-index: ;
 }
 
 .containerheader
@@ -36,6 +58,7 @@
     align-items: center;
 }
 
+/*ESTILIZAÇÃO DA MINHA LOGO*/
 .containerheader
 .meuheader
 .menu 
@@ -47,6 +70,7 @@
     font-size: 2vw;
 }
 
+/*ESTILIZAÇÃO DO MEU MENU / CONTEM OS LINKS PARA ACESSO*/
 .containerheader
 .meuheader
 .menu 
@@ -61,7 +85,7 @@
 .menu 
 .links ul{
     display: flex;
-    gap: 10%;
+    gap: 5%;
     list-style: none;
     font-size: .8vw;
     justify-content: flex-end;
@@ -72,27 +96,38 @@
 .links ul li{
     padding-top: 5px;
     font-family: var(--font-padrao);
-    font-weight: 500;
+    font-weight: 600;
     cursor: pointer;
+    position: relative;
 }
 .containerheader
 .meuheader
 .menu 
 .links ul li:hover{
-    color: red;
+    color: var(--color-hover);
 }
 .containerheader
 .meuheader
 .menu 
-.links ul li:hove::before{
+.links ul li:hover::before{
+    position: absolute;
     content: "";
-    top: 0;
-    width: 100%;
     height: 2px;
+    width: 110%;
+    top: 100%;
+    background-color: var(--color-hover);
+    animation:hoverbtnheadaer .7s 1 ease-in-out ;
+}
+
+/*ANIMAÇÃO DO MEU HOVER BEFORE, HEADER*/
+@keyframes hoverbtnheadaer {
+    0%{
+        width: 0%;
+    }
 }
 
 
-
+/**/
 .containerheader
 .donwheader{
     width: 100%;
