--- a/css/stylemobile.css
+++ b/css/stylemobile.css
@@ -5,11 +5,14 @@
 }
 
 :root{
-   --fonte-pp:"Poppins", sans-serif;
+    --principal: rgb(93, 223, 61);
+    --secundarias: white;
+    --fonte-pp:"Poppins", sans-serif;
 }
-@media screen and (max-width:450px) {
+@media screen and (max-width:950px) {
     header{
-        background-color: whitesmoke;
+        background-image: linear-gradient(45deg, #0c0c0cf6, #000000f1), url(../img/backgraund/tendencias-em-tecnologia-para-2023-o-que-ja-vingou-o-que-ficou-pelo-caminho-e-novas-apostas.jpg);
+        background-size: cover;background-position: center center;
         width: 100%;
         min-height: 100vh;
     }
@@ -21,6 +24,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        color: var(--principal);
     }
 
     .menuvanegacao ul{
@@ -33,6 +37,7 @@
 
     .menuvanegacao ul li{
         list-style:none;
+        font-weight: 500;
         font-family: var(--fonte-pp);
     }
 
@@ -47,7 +52,7 @@
     .ladoesquerdo{
         width: 95%;
         height:200px;
-        margin-top: 20%;
+        margin-top: 26%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -55,6 +60,7 @@
     .secaoconteiner .ladoesquerdo span{
         font-size: 3.5vw;
         font-family: var(--fonte-pp);
+        color: var(--secundarias);
     }
 
     .secaoconteiner .ladoesquerdo h1{
@@ -62,12 +68,14 @@
         padding-top: 0px;
         margin-bottom: 2%;
         font-family: var(--fonte-pp);
+        color: var(--principal);
     }
     .secaoconteiner .ladoesquerdo h2{
         font-size: 2.6vw;
         font-weight: 400;
         font-family: var(--fonte-pp);
         margin-bottom: 7%;
+        color: var(--secundarias);
     }
     .secaoconteiner .ladoesquerdo .meusbtns{
         width: 100%;
@@ -81,10 +89,11 @@
 
     .secaoconteiner .ladoesquerdo .meusbtns a i{
         font-size: 6vw;
+        color: var(--secundarias);
     }
 
     .secaoconteiner .ladoesquerdo .btnsobre{
-        width: 50%;
+        width: 70%;
         height: 30px;
     }
 
@@ -94,6 +103,8 @@
         height: 40px;
         border: none;
         border-radius: 10px;
+        font-size: 3.4vw;
+        background-color: var(--principal);
     }
 
 
