--- a/css/style.css
+++ b/css/style.css
@@ -235,25 +235,9 @@ header{
 .textosobremim p{
     font-family: var(--font-roboto);
     font-size: 1.5vw;
+    margin-bottom: 30px;
 }
 
-
-.ladofoto{
-    min-height: 90vh;
-    width: 40%;
-    background-image: linear-gradient(45deg, #3d3d3d11, #3d3d3d11), url(../img/backgraund/Screenshot_3.png);
-    background-position: center center;
-    background-size:contain;
-    border-radius: 0px 0px 30px 0px;
-}
-
-/*Aba do meu Portifolio*/
-
-.abaportifolio{
-    min-height: 100vh;
-    width: 100%;
-    background-color: var(--principal);
-}
 .habilidades{
     min-height: 20vh;
     width: 100%;
@@ -274,13 +258,31 @@ header{
     filter: drop-shadow(1px 1px 10px #8b8b8b4d);
 }
 .imagenshabilidades img{
-    width: 5vw;
+    width: 2vw;
     padding: 10px;
 
 }
 
 
+
+.ladofoto{
+    min-height: 90vh;
+    width: 40%;
+    background-image: linear-gradient(45deg, #3d3d3d11, #3d3d3d11), url(../img/backgraund/Screenshot_3.png);
+    background-position: center center;
+    background-size:contain;
+    border-radius: 0px 0px 30px 0px;
 }
+
+/*Aba do meu Portifolio*/
+
+.abaportifolio{
+    min-height: 100vh;
+    width: 100%;
+    background-color: #ecebebf6;
+}
+
+
 
 
 
