--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+  
 }
 
 ul{
@@ -26,8 +27,20 @@ ul{
     gap: 35px;
     list-style: none;
     font-weight: 500;
+    cursor: pointer;
+    
 }
-
+li{
+    position: relative;
+}
+ul li:hover::before{
+    top: 100%;
+    position:absolute;
+    content: "";
+    width: 100%;
+    height: 1px;
+    background-color: black;
+}
 
 .containerheader{
     width: 80%;
